# codingchallenge

./: .gitignore  Dockerfile.api  README.md  docker-compose.yml  findpart_server.py  pyproject.toml
