[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.0.0"
webdriver-manager = "^3.8.3"
jupyter = "^1.0.0"
bs4 = "^0.0.1"
selenium-wire = "^4.6.5"
pandas = "^1.5.0"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
